--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "match-sorter": "^6.2.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "pondjs": "^0.9.0",
     "react": "^17.0.1",
+    "react-date-picker": "^8.0.7",
     "react-dom": "^17.0.1",
     "react-map-gl": "^6.1.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spinners": "^0.10.6",
     "react-table": "^7.6.3",
+    "react-timeseries-charts": "^0.16.1",
+    "supercluster": "^7.1.2",
+    "use-supercluster": "^0.2.9",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
