--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-timeseries-charts": "^0.16.1",
     "supercluster": "^7.1.2",
     "use-supercluster": "^0.2.9",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
